Updated stats - fitted a hierarchical generalized additive model and tidied up code

--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -8,7 +8,7 @@ always_allow_html: true
 
 # Package loading
 
-```{r package-loading, message=FALSE}
+```{r package-loading, message=FALSE, warning=FALSE}
 # Load packages
 library(tidyverse)    # Tidy code
 library(cowplot)      # Plots on a grid
@@ -22,6 +22,12 @@ library(cmocean)      # Oceanographic colour palettes
 library(moments)      # Overlay distributions
 library(ggcorrplot)   # Correlation plots
 library(kableExtra)   # Pretty tables
+library(mgcv)         # Fit GAM
+library(gratia)       # Visualise GAM
+library(visreg)       # Visualise GAM
+library(tidymv)       # Predict GAM
+library(MuMIn)        # AIC weights
+library(DT)           # Interactive table
 # Custom figure theme
 theme_set(theme_bw())
 theme_update(axis.text = element_text(size = 9),
@@ -40,7 +46,7 @@ I want to test whether temperature and salinity at mesopelagic depth, sea-ice co
 
 ```{r data-loading, message=FALSE}
 # Map projections
-cell_res <- 100 # Cell resolution in km
+cell_res <- 50 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -50,11 +56,6 @@ arctic_latlon <- raster(extent(-155, 35, 66, 85), # Base projection for acoustic
                         res = c(2, 1)) # cells of 2 degree longitude per 1 degree latitude
 
 # Coastline shapefiles
-# coast_10m_latlon <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in latlon
-#   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
-#   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
-#   fortify() %>% # Convert to a dataframe for ggplot
-#   rename(lon = long)
 coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coastline in laea
   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
@@ -62,29 +63,15 @@ coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>% # Coast
   fortify() %>% # Convert to a dataframe for ggplot
   rename(xc = long, yc = lat)
 
-# IHO regions
-# IHO_latlon <- readOGR("data/arctic_regions/World_Seas_IHO_v3.shp", verbose = F) %>% # Coastline in latlon
-#   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
-#   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
-#   fortify() %>% # Convert to dataframe for ggplot
-#   rename(xc = long, yc = lat)
-# IHO_laea <- readOGR("data/arctic_regions/World_Seas_IHO_v3.shp", verbose = F) %>% # Coastline in latlon
-#   spTransform(CRSobj = crs(arctic_latlon)) %>% # Make sure that the shapefile is in the right projection
-#   crop(extent(-180, 180, 0, 90)) %>% # Crop shapefile
-#   spTransform(CRSobj = crs(arctic_laea)) %>% # Project shapefile in laea
-#   fortify() %>% # Convert to dataframe for ggplot
-#   rename(xc = long, yc = lat)
-
 # Gridded acoustic, CTD, and sea ice data
 load("data/acoustics/SA_grids.RData") # Acoustic data
-# load("data/CTD/CTD_grids.RData") # CTD data
 load("data/remote_sensing/physics_grids.RData") # Modelled physics data 
 load("data/remote_sensing/seaice_grids.RData") # Remote sensing sea ice data
 ```
 
 # Data preparation
 
-I combine data using the EASE-Grid 2.0 North (EPSG:6931) and normalize the covariates. Calculation of the anomalies are also computed based on the IHO areas.
+I combine data using the EASE-Grid 2.0 North (EPSG:6931) and normalize the covariates per IHO area. I combined the Beaufort Sea and West Arctic Ocean data to have more points for the regression due to their geographical proximity.
 
 ```{r combine-data}
 SA_laea <- SA_grid_laea %>%  # Tidy anomaly dataset for joining
@@ -121,50 +108,100 @@ stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "ce
                                                                                 openwater_duration),
                                                                            na.rm = T),
                                       openwater_duration),
-         seaice_duration = if_else(is.na(seaice_duration) == T, mean(pull(subset(seaice_grid_laea,
-                                                                                 xc >= xc_na - 50 &
-                                                                                   xc <= xc_na + 50 & 
-                                                                                   yc >= yc_na - 50 & 
-                                                                                   yc <= yc_na + 50 & 
-                                                                                   year == year_na,
-                                                                                 select = seaice_duration),
-                                                                          seaice_duration),
-                                                                     na.rm = T),
-                                   seaice_duration)) %>%
+         ice_break = if_else(is.na(ice_break) == T, mean(pull(subset(seaice_grid_laea,
+                                                                     xc >= xc_na - 50 &
+                                                                       xc <= xc_na + 50 & 
+                                                                       yc >= yc_na - 50 & 
+                                                                       yc <= yc_na + 50 & 
+                                                                       year == year_na,
+                                                                     select = ice_break),
+                                                              ice_break),
+                                                         na.rm = T),
+                             ice_break),
+         ice_week = if_else(is.na(ice_week) == T, mean(pull(subset(seaice_grid_laea,
+                                                                   xc >= xc_na - 50 &
+                                                                     xc <= xc_na + 50 & 
+                                                                     yc >= yc_na - 50 & 
+                                                                     yc <= yc_na + 50 & 
+                                                                     year == year_na,
+                                                                   select = ice_week),
+                                                            ice_week),
+                                                       na.rm = T),
+                            ice_week)) %>%
   filter(depth == 380) %>% # Select data at 380 m depth
-  mutate(SA_int = 10 * log10(NASC_int)) %>%
-  group_by(area) %>%
-  mutate(SA_int_n = (SA_int - min(SA_int)) / (max(SA_int - min(SA_int)))) %>% # SA_int_n per area
+  mutate(SA_int = 10 * log10(NASC_int),
+         IHO_area = factor(case_when(IHO_area == "East Arctic Ocean" ~ "EAO",
+                                     IHO_area == "West Arctic Ocean" ~ "WAO_BF",
+                                     IHO_area == "Beaufort Sea" ~ "WAO_BF",
+                                     IHO_area == "The Northwestern Passages" ~ "CAA",
+                                     IHO_area == "Baffin Bay" ~ "BB",
+                                     IHO_area == "Davis Strait" ~ "DS"),
+                            levels = c("WAO_BF", "CAA", "BB", "DS", "EAO"))) %>%
   ungroup() %>%
   dplyr::select(-mean_NASC_area_year, -sd_NASC_area_year, -NASC_anomaly_d, -cell_res, -vxo, -vyo,
-                -mean_temp_area_depth, -mean_velo_area_depth, -xc_na, -yc_na, -year_na)
+                -mean_temp_area_depth, -mean_velo_area_depth, -xc_na, -yc_na, -year_na, -siconc, -sithick,
+                -temp_anomaly, -velocity_anomaly)
 ```
-
 
 # Data exploration 
 
 Maps of all variables.
 
 ```{r map-SA-int, fig.height=3, fig.width=7}
-stat_laea %>% # Backscatter
+stat_laea %>% 
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = SA_int_n), color = "grey30") +
-  scale_fill_viridis_c("SA int (dB)", option = "turbo", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Integrated SA") +
+  geom_point(aes(col = IHO_area)) +
+  ggtitle("regions") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
-```{r map-SA-ano, fig.height=3, fig.width=7}
-stat_laea %>% # Backscatter anomaly
+```{r map-siconc, fig.height=3, fig.width=7}
+stat_laea %>% # Ice concentration
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = openwater_duration), color = "grey30") +
-  scale_fill_viridis_c("Anomaly sA", option = "plasma", na.value = "red") +
+  geom_tile(aes(fill = mean_ice_conc)) +
+  scale_fill_cmocean("Ice (%)", name = "ice", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
-  ggtitle("SA ano") +
+  ggtitle("Sea ice concentration") +
+  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+```
+
+
+```{r map-ow, fig.height=3, fig.width=7}
+stat_laea %>% # Openwater duration
+  ggplot(aes(x = xc,  y = yc)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+  geom_tile(aes(fill = openwater_duration)) +
+  scale_fill_viridis_c("Day", option = "plasma", na.value = "red") +
+  facet_wrap(~ year, ncol = 3) +
+  ggtitle("Openwater duration") +
+  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+```
+
+```{r map-ice-day, fig.height=3, fig.width=7}
+stat_laea %>% # Openwater duration
+  ggplot(aes(x = xc,  y = yc)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+  geom_tile(aes(fill = ice_break)) +
+  scale_fill_viridis_c("Day", option = "viridis", na.value = "red") +
+  facet_wrap(~ year, ncol = 3) +
+  ggtitle("Day ice breakup") +
+  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
+  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+```
+
+```{r map-ice-week, fig.height=3, fig.width=7}
+stat_laea %>% # Openwater duration
+  ggplot(aes(x = xc,  y = yc)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
+  geom_tile(aes(fill = ice_week)) +
+  scale_fill_viridis_c("Week", option = "viridis", na.value = "red") +
+  facet_wrap(~ year, ncol = 3) +
+  ggtitle("Week ice breakup") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
@@ -173,7 +210,7 @@ stat_laea %>% # Backscatter anomaly
 stat_laea %>% # Temperature
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = thetao), color = "grey30") +
+  geom_tile(aes(fill = thetao)) +
   scale_fill_cmocean("Temp (dC)", name = "thermal", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Temperature at 380 m depth") +
@@ -185,7 +222,7 @@ stat_laea %>% # Temperature
 stat_laea %>% # Salinity
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = so), color = "grey30") +
+  geom_tile(aes(fill = so)) +
   scale_fill_cmocean("Sal (psu)", name = "haline", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Salinity at 380 m depth") +
@@ -197,7 +234,7 @@ stat_laea %>% # Salinity
 stat_laea %>% # Ice concentration
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = velocity), color = "grey30") +
+  geom_tile(aes(fill = velocity)) +
   scale_fill_cmocean("velo (m/s)", name = "speed", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Current velocity at 380 m depth") +
@@ -209,7 +246,7 @@ stat_laea %>% # Ice concentration
 stat_laea %>% # Mixed layer depth
   ggplot(aes(x = xc,  y = yc)) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = mlotst), color = "grey30") +
+  geom_tile(aes(fill = mlotst)) +
   scale_fill_viridis_c("depth (m)", option = "plasma", direction = -1, na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Mixed layer depth") +
@@ -217,277 +254,324 @@ stat_laea %>% # Mixed layer depth
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
-```{r map-sithick, fig.height=3, fig.width=7}
-stat_laea %>% # Ice thickness
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = sithick), color = "grey30") +
-  scale_fill_cmocean("Thick (m)", name = "ice", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Sea ice thickness") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
-```{r map-siconc, fig.height=3, fig.width=7}
-stat_laea %>% # Ice concentration
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = siconc), color = "grey30") +
-  scale_fill_cmocean("Conc (%)", name = "ice", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Sea ice concentration") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
-# Linear mixed model
+# HGAM
 
 ## Data preparation
 
-I require the following packages to fit GLMM.
+Because I am interested in the environmental drivers of mesopelagic backscatter within each area, I run a linear model for each 
+area. First, I prepare the dataset and standardize each environmental variable per area.
 
-```{r glm-packages, message=FALSE}
-library(lme4)
-library(MASS)
-library(vcdExtra)
-library(bbmle)
-library(MuMIn)
-library(ggplot2)
-library(DescTools)
-library(remotes)
-library(gridExtra)
-library(lattice)
-```
-
-
-Select the variables of interest, SA_int_n (per area), velocity, temperature anomaly, and openwater_duration.
-
-```{r}
+```{r lm-prep}
 SA_df <- stat_laea %>%
-  dplyr::select(year, xc, yc, area, SA_int, velocity, temp_anomaly, thetao, openwater_duration)
+  dplyr::select(year, xc, yc, area, IHO_area_large, IHO_area, SA_int, velocity, thetao, openwater_duration, ice_week) %>%
+  group_by(IHO_area) %>%
+  mutate(year = factor(year),
+         SA_int_n = (SA_int - min(SA_int)) / (max(SA_int) - min(SA_int)),
+         v_n = (velocity - min(velocity)) / (max(velocity) - min(velocity)),
+         t_n = (thetao - min(thetao)) / (max(thetao) - min(thetao)),
+         o_n = (openwater_duration - min(openwater_duration)) / (max(openwater_duration) - min(openwater_duration)),
+         s_n = (ice_week - min(ice_week)) / (max(ice_week) - min(ice_week))) %>%
+  ungroup() %>%
+  rename(IHO = IHO_area, 
+         v = velocity,
+         t = thetao,
+         o = openwater_duration,
+         s = ice_week)
 ```
 
+Plot data.
 
-Summary of data. The dataset is not perfectly balanced.
-
-```{r table-summary-df}
-table(SA_df[, c("area", "year")])
-```
-
-Scatterplot of responses of covariates.
-
-```{r scatterplot-df, message=FALSE}
+```{r plot-data-area, fig.height=8, fig.width=10, message=FALSE}
 plot_grid(SA_df %>%
-            ggplot(aes(x = velocity, y = SA_int, col = area)) + 
-            geom_point(),
+            ggplot(aes(x = v_n, y = SA_int_n, col = IHO_area_large)) +
+            geom_point() +
+            geom_smooth(method = "lm", se = F, col = "grey20") +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = thetao, y = SA_int, col = area)) + 
-            geom_point(),
+            ggplot(aes(x = t_n, y = SA_int_n, col = IHO_area_large)) +
+            geom_point() +
+            geom_smooth(method = "lm", se = F, col = "grey20") +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = openwater_duration, y = SA_int, col = area)) + 
-            geom_point())
+            ggplot(aes(x = o_n, y = SA_int_n, col = IHO_area_large)) +
+            geom_point() +
+            geom_smooth(method = "lm", se = F, col = "grey20") +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
+          SA_df %>%
+            ggplot(aes(x = s_n, y = SA_int_n, col = IHO_area_large)) +
+            geom_point() +
+            geom_smooth(method = "lm", se = F, col = "grey20") +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
+          ncol = 1)
 ```
 
-Distribution of continuous variables.
-
-```{r hist-df, message=FALSE}
+```{r plot-distribution, fig.height=8, fig.width=10, message=FALSE}
 plot_grid(SA_df %>%
-            ggplot(aes(x = SA_int)) + 
-            geom_histogram(),
+            ggplot(aes(x = v_n, fill = IHO_area_large)) +
+            geom_histogram() +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = velocity)) + 
-            geom_histogram(),
+            ggplot(aes(x = t_n, fill = IHO_area_large)) +
+            geom_histogram() +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = thetao)) + 
-            geom_histogram(),
+            ggplot(aes(x = o_n, fill = IHO_area_large)) +
+            geom_histogram() +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = openwater_duration)) + 
-            geom_histogram())
+            ggplot(aes(x = s_n, fill = IHO_area_large)) +
+            geom_histogram() +
+            facet_grid(~ IHO) +
+            theme(legend.position = "none"),
+          ncol = 1)
 ```
 
-Check colinearity.
+Check correlations.
 
-```{r colinearity}
-corr <- SA_df %>% # Compute Spearman correlation matrix
-  dplyr::select(-year, -xc, -yc, -area) %>%
+```{r corr-area}
+corr_EAO <- SA_df %>% # Compute Spearman correlation matrix
+  filter(IHO == "EAO") %>%
+  dplyr::select(-year, -xc, -yc, -IHO_area_large, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
   cor(., method = "spearman") %>%
   round(., 2)
-ggcorrplot(corr, type = "lower", lab = T)
-```
+ggcorrplot(corr_EAO, type = "lower", lab = T, title = "corr EAO")
 
-Scale data per area.
+corr_BB <- SA_df %>% # Compute Spearman correlation matrix
+  filter(IHO == "BB") %>%
+  dplyr::select(-year, -xc, -yc, -IHO_area_large, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+  cor(., method = "spearman") %>%
+  round(., 2)
+ggcorrplot(corr_BB, type = "lower", lab = T, title = "corr BB")
 
-```{r}
-SA_df <- SA_df %>%
-  # group_by(area) %>%
-  mutate(SA_int_n = (SA_int - min(SA_int)) / (max(SA_int) - min(SA_int)),
-         velo_n = (velocity - min(velocity)) / (max(velocity) - min(velocity)),
-         temp_n = (thetao - min(thetao)) / (max(thetao) - min(thetao)),
-         ow_n = (openwater_duration - min(openwater_duration)) / (max(openwater_duration) - min(openwater_duration))) %>%
-  ungroup()
+corr_DS <- SA_df %>% # Compute Spearman correlation matrix
+  filter(IHO == "DS") %>%
+  dplyr::select(-year, -xc, -yc, -IHO_area_large, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+  cor(., method = "spearman") %>%
+  round(., 2)
+ggcorrplot(corr_DS, type = "lower", lab = T, title = "corr BB")
+
+corr_WAO <- SA_df %>% # Compute Spearman correlation matrix
+  filter(IHO == "WAO_BF") %>%
+  dplyr::select(-year, -xc, -yc, -IHO_area_large, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+  cor(., method = "spearman") %>%
+  round(., 2)
+ggcorrplot(corr_WAO, type = "lower", lab = T, title = "corr WAO")
+
+corr_CAA <- SA_df %>% # Compute Spearman correlation matrix
+  filter(IHO == "CAA") %>%
+  dplyr::select(-year, -xc, -yc, -IHO_area_large, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+  cor(., method = "spearman") %>%
+  round(., 2)
+ggcorrplot(corr_CAA, type = "lower", lab = T, title = "corr CAA")
 ```
 
 ## Model fitting
 
-Fit a linear model.
+I decided to fit hierarchical generalized additive model due to their flexibility in modelling non linear relationships. I fit several models with different structures (random intercept, random "slope") following Pedersen et al. 2019.
 
-```{r lm-test}
-lm_test <- lm(SA_int_n ~ velo_n + temp_n + ow_n, data = SA_df) # Fit model
-lm_test_resid <- rstandard(lm_test) # Calculate residuals
+```{r HGAM-fit}
+# Model G
+GAM1 <- gam(SA_int_n ~ s(v_n, k = 5, bs = "tp") + s(t_n, k = 5, bs = "tp") + s(o_n, k = 5, bs = "tp"),
+            data = SA_df, family = "gaussian", method = "REML")
+# Model S
+GAM2 <- gam(SA_int_n ~ s(v_n, IHO, bs = "fs", k = 5) + s(t_n, IHO, bs = "fs", k = 5) + s(o_n, IHO, bs = "fs", k = 5), 
+            data = SA_df, family = "gaussian", method = "REML")
+# Model I
+GAM3 <- gam(SA_int_n ~ s(v_n, by = IHO, k = 5, bs = "tp") + s(t_n, by = IHO, k = 5, bs = "tp") + 
+              s(o_n, by = IHO, k = 5, bs = "tp") + s(IHO, bs = "re"),
+            data = SA_df, family = "gaussian", method = "REML")
+# Model GS
+GAM4 <- gam(SA_int_n ~ s(v_n, k = 5) + s(t_n, k = 5) + s(o_n, k = 5) + s(v_n, IHO, bs = "fs", k = 5) + 
+              s(t_n, IHO, bs = "fs", k = 5) + s(o_n, IHO, bs = "fs", k = 5),
+            data = SA_df, family = "gaussian", method = "REML")
+# Model GI
+GAM5 <- gam(SA_int_n ~ s(v_n, k = 5) + s(t_n, k = 5) + s(o_n, k = 5) + s(v_n, by = IHO, k = 5, bs = "tp") + 
+              s(t_n, by = IHO, k = 5, bs = "tp") + s(o_n, by = IHO, k = 5, bs = "tp") + s(IHO, bs = "re"),
+            data = SA_df, family = "gaussian", method = "REML")
+
+# Summary metrics
+GAM_AIC <- AIC(GAM1, GAM2, GAM3, GAM4, GAM5) %>% 
+  rownames_to_column() %>%
+  rename(model = rowname)
+# Metrics data frame
+summ_GAM <- data.frame(model = c("GAM1", "GAM2", "GAM3", "GAM4", "GAM5"),
+                       reml = round(c(GAM1$gcv.ubre, GAM2$gcv.ubre, GAM3$gcv.ubre, GAM4$gcv.ubre, GAM5$gcv.ubre), 2), 
+                       dev_expl = round(c((1 - (GAM1$deviance / GAM1$null.deviance)) * 100,
+                                          (1 - (GAM2$deviance / GAM2$null.deviance)) * 100,
+                                          (1 - (GAM3$deviance / GAM3$null.deviance)) * 100,
+                                          (1 - (GAM4$deviance / GAM4$null.deviance)) * 100,
+                                          (1 - (GAM5$deviance / GAM5$null.deviance)) * 100), 2),
+                       r2 = round(c(summary(GAM1)$r.sq, summary(GAM2)$r.sq, summary(GAM3)$r.sq, summary(GAM4)$r.sq, 
+                                    summary(GAM5)$r.sq), 2)) %>%
+  full_join(., GAM_AIC, by = "model") %>%
+  mutate(df = round(df, 3),
+         AIC = round(AIC, 3),
+         dAIC = round(AIC - min(AIC), 2),
+         w_AIC = round(Weights(AIC), 10)) %>%
+  dplyr::select(model, df, dev_expl, r2, reml, AIC, dAIC, w_AIC) %>%
+  arrange(dAIC) %>% 
+  datatable(class = "cell-border stribe", rownames = F)
+summ_GAM
 ```
 
-Plot residuals.
+`GAM3` and `GAM5` are the two models with similar performances, although `GAM3` seems to perform slightly better.
 
-```{r lm-test-resids}
-par(mfrow = c(1, 2))
-plot(lm_test_resid ~ as.factor(SA_df$area), xlab = "Area", ylab = "Standardized residuals")
-abline(0, 0, lty = 2)
-plot(lm_test_resid ~ as.factor(SA_df$year), xlab = "Year", ylab = "Standardized residuals")
-abline(0, 0, lty = 2)
+```{r summary-GAM3}
+summary(GAM3)
 ```
 
-There is residual variance that could be explained by area but not so much by the year. So I fit a linear mixed model.
+## Model checking
 
-```{r}
-lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area), data = SA_df, REML = TRUE)
+First I check the basis size k. `k-indexes` are > 1 or close to 1 so the basis size is large enough. The residual plot look good too.
+
+```{r basis-size-residuals}
+par(mfrow = c(2, 2))
+gam.check(GAM3, rep = 500)
 ```
 
-Incorporate different model sturctures (random intercepts and random slopes).
+Check residuals versus covariates.
 
-```{r lmer}
-# Note that REML = FALSE in order to compare with the basic linear model where estimation method = ML
-# Basic linear model / Linear model with no random effects
-M0 <- lm(SA_int_n ~ velo_n + temp_n + ow_n,
-          data = SA_df)
-# Full model with varying intercepts
-M1 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area) + (1 | year), 
-           data = SA_df, REML = T)
-# Full model with varying intercepts and slopes
-M2 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n +
-             (1 + velo_n | area) + (1 + temp_n | area) + (1 + ow_n | area) +
-             (1 + velo_n | year) + (1 + temp_n | year) + (1 + ow_n | year),
-           data = SA_df, REML = FALSE)
-# No year varying intercepts only
-M3 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area), 
-           data = SA_df, REML = FALSE)
-# No area varying intercepts only
-M4 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | year), 
-           data = SA_df, REML = FALSE)
-# No year, varying intercepts and slopes
-M5 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + 
-             (1 + velo_n | area) + (1 + temp_n | area) + (1 + ow_n | area),
-           data = SA_df, REML = FALSE)
-# No area, varying intercepts and slopes
-M6 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n +
-             (1 + velo_n | year) + (1 + temp_n | year) + (1 + ow_n | year),
-           data = SA_df, REML = FALSE)
-# Full model with varying intercepts and slopes only varying by area
-M7 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | year) +
-             (1 + velo_n | area) + (1 + temp_n | area) + (1 + ow_n | area),
-           data = SA_df, REML = FALSE)
-# Full model with varying intercepts and slopes only varying by year
-M8 <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area) +
-             (1 + velo_n | year) + (1 + temp_n | year) + (1 + ow_n | year),
-           data = SA_df, REML = FALSE)
+```{r residuals-covariates, message=FALSE}
+resid_GAM <- bind_cols(SA_df, residuals.gam(GAM3)) %>%
+  rename(resid = "...17")
+plot_grid(resid_GAM %>%
+            ggplot(aes(x = v_n, y = resid)) + 
+            geom_hline(yintercept = 0, col = "red") +
+            labs(x = "velocity normalized") +
+            geom_point(), 
+          resid_GAM %>%
+            ggplot(aes(x = t_n, y = resid)) + 
+            geom_hline(yintercept = 0, col = "red") +
+            labs(x = "temperature normalized") +
+            geom_point(), 
+          resid_GAM %>%
+            ggplot(aes(x = o_n, y = resid)) + 
+            geom_hline(yintercept = 0, col = "red") +
+            labs(x = "open water normalized") +
+            geom_point(), 
+          resid_GAM %>%
+            ggplot(aes(x = IHO, y = resid)) + 
+            geom_hline(yintercept = 0, col = "red") +
+            labs(x = "area") +
+            geom_boxplot(fill = NA), 
+          resid_GAM %>%
+            ggplot(aes(x = year, y = resid)) + 
+            geom_hline(yintercept = 0, col = "red") +
+            labs(x = "year") +
+            geom_boxplot(fill = NA))
 ```
 
-Compare models.
+Check auto-correlation wihtin the model. All seems in order.
 
-```{r model-comparison}
-# To group all AICc values into a single table, we can use MuMIn::model.sel() to calculate AICc for each model
-MuMIn::model.sel(M0, M1, M2, M3, M4, M5, M6, M7, M8)[, c("df", "logLik", "AICc", "delta")] 
+```{r acf-pacf}
+par(mfrow = c(1, 2), mar = c(4, 4, 4, 0.5))
+acf(resid(GAM3), lag.max = 36, main = "ACF")
+pacf(resid(GAM3), lag.max = 36, main = "pACF")
 ```
 
-M3, the model which does not include a year effect is the best model. I therefore refit M3 with REML for further analyses.
+## Model selection
 
-```{r refit-M3}
-# No year varying intercepts only
-M3_bis <- lmer(SA_int_n ~ velo_n + temp_n + ow_n + (1 | area), 
-               data = SA_df, REML = TRUE)
+I turn on the double penalty (`select = TRUE`) and check the covariates that has been shrunk. All covariates are imporant in the model. 
+
+```{r GAM-selection}
+GAM3_p <- gam(SA_int_n ~ s(v_n, by = IHO, k = 5, bs = "tp") + s(t_n, by = IHO, k = 5, bs = "tp") + 
+                s(o_n, by = IHO, k = 5, bs = "tp") + s(IHO, bs = "re"),
+              data = SA_df, family = "gaussian", method = "REML", select = TRUE)
+summary(GAM3_p)
 ```
 
-## Model validation 
-
-Check homogeneity of variance.
-
-```{r variance-homogeneity}
-MX <- M3_bis
-# Plot predicted values vs residual values
-par(mar = c(4, 4, 0.5, 0.5))
-plot(resid(MX) ~ fitted(MX), xlab = "Predicted values", ylab = "Normalized residuals")
-abline(h = 0, lty = 2)
+```{r fig.height=10}
+draw(GAM3_p, scales = "fixed")
 ```
 
-Assumption is met.
+## Model visualization
 
-Check independence of model residuals with each covariate. First I plot the residuals vs each covariate.
+Quick plots using `visreg`.
 
-```{r, fig.width=12, fig.height=4}
-MX <- M3_bis
-# In order to check the independence of the model residuals we need to plot residuals vs each covariate of the model
-par(mfrow = c(1, 5), mar = c(4, 4, 0.5, 0.5))
-plot(resid(MX) ~ SA_df$velo_n, xlab = "Velocity normalized", ylab = "Normalized residuals")
-abline(h = 0, lty = 2)
-plot(resid(MX) ~ SA_df$temp_n, xlab = "Temperature normalized", ylab = "Normalized residuals")
-abline(h = 0, lty = 2)
-plot(resid(MX) ~ SA_df$ow_n, xlab = "Openwater normalized", ylab = "Normalized residuals")
-abline(h = 0, lty = 2)
-boxplot(resid(MX) ~ area, data = SA_df, xlab = "Area", ylab = "Normalized residuals")
-abline(h = 0, lty = 2)
-boxplot(resid(MX) ~ year, data = SA_df, xlab = "Year", ylab = "Normalized residuals")
-abline(h = 0, lty = 2)
+```{r plot-GAM15}
+visreg(GAM3, "v_n", "IHO", overlay = F, scale = "response", band = F, partial = T)
+visreg(GAM3, "t_n", "IHO", overlay = F, scale = "response", band = F, partial = T)
+visreg(GAM3, "o_n", "IHO", overlay = F, scale = "response", band = F, partial = T)
 ```
 
-Check normality of residuals.
+I predict the data and then use that dataframe to plot it in a "clean" way with `ggplot`.
 
-```{r normality}
-qqnorm(resid(M3_bis))
-qqline(resid(M3_bis))
+```{r predict-GAM15}
+pred_vn <- get_gam_predictions(GAM3, series = v_n, .comparison = IHO, series_length = 50) %>% 
+  mutate(var = "v_n",
+         signif = case_when(IHO == "WAO_BF" ~  0.05, # Significance level
+                            IHO == "CAA" ~ 1,
+                            IHO == "BB" ~ 0.01,
+                            IHO == "DS" ~ 0.05,
+                            IHO == "EAO" ~ 1),
+         signif_group = factor(if_else(signif > 0.1, F, T))) %>%
+  rename(idx = ".idx",
+         fit = SA_int_n,
+         value = v_n)
+pred_tn <- get_gam_predictions(GAM3, series = t_n, .comparison = IHO, series_length = 50) %>%
+  mutate(var = "t_n",
+         signif = case_when(IHO == "WAO_BF" ~ 0.001, # significance level
+                            IHO == "CAA" ~ 0.1,
+                            IHO == "BB" ~ 0.001,
+                            IHO == "DS" ~ 1,
+                            IHO == "EAO" ~ 0.1),
+         signif_group = factor(if_else(signif > 0.1, F, T))) %>%
+    rename(idx = ".idx",
+           fit = SA_int_n,
+           value = t_n)
+pred_on <- get_gam_predictions(GAM3, series = o_n, .comparison = IHO, series_length = 50) %>%
+  mutate(var = "o_n", 
+         signif = case_when(IHO == "WAO_BF" ~ 0.01, # significance level
+                            IHO == "CAA" ~ 0.001,
+                            IHO == "BB" ~ 0.001,
+                            IHO == "DS" ~ 1,
+                            IHO == "EAO" ~ 0.05),
+         signif_group = factor(if_else(signif > 0.1, F, T))) %>%
+  rename(idx = ".idx",
+         fit = SA_int_n,
+         value = o_n)
+# Combine data
+pred_GAM <- bind_rows(pred_vn, pred_tn, pred_on)
+
+# Save data
+save(pred_GAM, GAM3, file = "data/statistics/GAM_results.RData")
 ```
 
-Residuals are pretty normal except for two outliers.
+`ggplot` plot.
 
-## Model interpretation and visualisation
+```{r ggplot-gam}
+col_pal <- c("#5BBCD6", "#00A08A", "#F2AD00", "#F98400", "#FF0000")# wesanderson::wes_palette("Darjeeling1", type = "discrete") 
 
-Check the summary of our model.
-
-```{r model-summary}
-summary(M3_bis)
-# Calculate confidence interval for parameter
-CI_velo <- c(0.06237 * 1.96 - 0.11992, 0.06237 * 1.96 + 0.11992) # velocity, significantly different from 0
-CI_velo
-CI_temp <- c(0.07025 * 1.96 - 0.13684, 0.07025 * 1.96 + 0.13684) # temperature, significantly different from 0
-CI_temp
-CI_ow <- c(0.06924 * 1.96 - 0.44054, 0.06924 * 1.96 + 0.44054) # openwater, NOT significantly different from 0
-CI_ow
+plot_grid(pred_GAM %>%
+            filter(var == "v_n") %>%
+            ggplot() +
+            geom_line(aes(x = value, y = fit, col = IHO, linetype = IHO), size = 0.75) +
+            # geom_ribbon(aes(x = value, ymin = CI_lower, ymax = CI_upper, fill = IHO), alpha = 0.1) +
+            scale_colour_manual(name = "IHO", values = col_pal) + 
+            scale_linetype_manual(name = "IHO", values = c(1, 2, 1, 1, 2)) +
+            labs(x = "Velo. 380 m normalized", y = expression("S"[A]*" normalized")),
+          pred_GAM %>%
+            filter(var == "t_n") %>%
+            ggplot() +
+            geom_line(aes(x = value, y = fit, col = IHO, linetype = IHO), size = 0.75) +
+            # geom_ribbon(aes(x = value, ymin = CI_lower, ymax = CI_upper, fill = IHO), alpha = 0.1) +
+            scale_colour_manual(name = "IHO", values = col_pal) + 
+            scale_linetype_manual(name = "IHO", values = c(1, 1, 1, 2, 1)) +
+            labs(x = "Temp. 380 m normalized", y = expression("S"[A]*" normalized")),
+          pred_GAM %>%
+            filter(var == "o_n") %>%
+            ggplot() +
+            geom_line(aes(x = value, y = fit, col = IHO, linetype = IHO), size = 0.75) +
+            # geom_ribbon(aes(x = value, ymin = CI_lower, ymax = CI_upper, fill = IHO), alpha = 0.1) +
+            scale_colour_manual(name = "IHO", values = col_pal) + 
+            scale_linetype_manual(name = "IHO", values = c(1, 1, 1, 2, 1)) +
+            labs(x = "Open water normalized", y = expression("S"[A]*" normalized")))
 ```
 
-Plot results 
-
-```{r plot-m3}
-area_coef <- coef(M3_bis)$area
-
-SA_df %>%
-  ggplot() +
-  geom_point(aes(x = velo_n, y = SA_int_n, col = factor(area)), size = 4) + 
-  geom_abline(intercept = area_coef[1, 1], slope = area_coef[1, 2], col = "coral2", size = 1) +
-  geom_abline(intercept = area_coef[2, 1], slope = area_coef[2, 2], col = "green4", size = 1) +
-  geom_abline(intercept = area_coef[3, 1], slope = area_coef[3, 2], col = "blue1", size = 1)
-
-SA_df %>%
-  ggplot() +
-  geom_point(aes(x = temp_n, y = SA_int_n, col = factor(area)), size = 4) + 
-  geom_abline(intercept = area_coef[1, 1], slope = area_coef[1, 3], col = "coral2", size = 1) +
-  geom_abline(intercept = area_coef[2, 1], slope = area_coef[2, 3], col = "green4", size = 1) +
-  geom_abline(intercept = area_coef[3, 1], slope = area_coef[3, 3], col = "blue1", size = 1)
-
-SA_df %>%
-  ggplot() +
-  geom_point(aes(x = ow_n, y = SA_int_n, col = factor(area)), size = 4) + 
-  geom_abline(intercept = area_coef[1, 1], slope = area_coef[1, 4], col = "coral2", size = 1) +
-  geom_abline(intercept = area_coef[2, 1], slope = area_coef[2, 4], col = "green4", size = 1) +
-  geom_abline(intercept = area_coef[3, 1], slope = area_coef[3, 4], col = "blue1", size = 1)
-```
-
-I am not too convinced so I fit a hierarchical gam.
